game settings with menu

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,8 +25,8 @@ tag=DEFAULT
 ###
 
 ### desktop :
-desktop.title=Welcome to our Swing Desktop Application !
-desktop.jLabelFooterState=You are executing this application on : 
+desktop.title=Welcome Memory Game, good luck !
+desktop.jLabelFooterState=You are executing this game on : 
 desktop.confirmbeforeexitdialog.title=Please confirm
 desktop.confirmbeforeexitdialog.text=Quit Application ?
 
@@ -34,6 +34,18 @@ desktop.confirmbeforeexitdialog.text=Quit Application ?
 menubar.jMenuFile=File
 menubar.jMenuItemFrameGame=New Game
 menubar.jMenuItemQuit=Quit
+#
+menubar.jMenuSettings=Settings
+menubar.jMenuCategory=Category
+menubar.jMenuItemCategory0=Animal
+menubar.jMenuItemCategory1=Flag
+menubar.jMenuItemCategory2=Sport
+menubar.jMenuItemCategory3=Fruit
+menubar.jMenuLevel=Level
+menubar.jMenuItemLevel0=Beginner
+menubar.jMenuItemLevel1=Medium
+menubar.jMenuItemLevel2=Intermediate
+menubar.jMenuItemLevel3=Advanced
 #
 menubar.jMenuHelp=Help
 menubar.jMenuItemFrameAbout=About Application
@@ -45,6 +57,7 @@ frameabout.jTextArea1=This is a sample basic desktop \napplication to help devel
 frameabout.jButtonOk=Ok
 
 ### framegame :
-framegame.title=Memory Game
+framegame.title=Game
+framegame.jLabelFooter.score=Score
 
 
