--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,7 +28,7 @@ tag=DEFAULT
 desktop.title=Welcome Memory Game, good luck !
 desktop.jLabelFooterState=You are executing this game on : 
 desktop.confirmbeforeexitdialog.title=Please confirm
-desktop.confirmbeforeexitdialog.text=Quit Application ?
+desktop.confirmbeforeexitdialog.text=Quit MemoryGame ?
 
 ### menu :
 menubar.jMenuFile=File
@@ -41,6 +41,7 @@ menubar.jMenuItemCategory0=Animal
 menubar.jMenuItemCategory1=Flag
 menubar.jMenuItemCategory2=Sport
 menubar.jMenuItemCategory3=Fruit
+menubar.jMenuItemCategory4=Transport
 menubar.jMenuLevel=Level
 menubar.jMenuItemLevel0=Beginner
 menubar.jMenuItemLevel1=Medium
@@ -48,11 +49,11 @@ menubar.jMenuItemLevel2=Intermediate
 menubar.jMenuItemLevel3=Advanced
 #
 menubar.jMenuHelp=Help
-menubar.jMenuItemFrameAbout=About Application
+menubar.jMenuItemFrameAbout=About MemoryGame
 
 ### frameabout :
-frameabout.title=About [ Application ]
-frameabout.jLabelHeader=<html><center><h3>Swing Desktop Starter 1.0.0</h3></center></html>
+frameabout.title=About [ MemoryGame ]
+frameabout.jLabelHeader=<html><center><h3></h3></center></html>
 frameabout.jTextArea1=This is a sample basic desktop \napplication to help developers \nstart a new program. \n\nMany thanks to : \n\nISET Djerba...\n\n2017 (c) www.isetjb.net 
 frameabout.jButtonOk=Ok
 
