Add category Technology

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -42,6 +42,7 @@ menubar.jMenuItemCategory1=Flag
 menubar.jMenuItemCategory2=Sport
 menubar.jMenuItemCategory3=Fruit
 menubar.jMenuItemCategory4=Transport
+menubar.jMenuItemCategory5=Technology
 menubar.jMenuLevel=Level
 menubar.jMenuItemLevel0=Beginner
 menubar.jMenuItemLevel1=Medium
