--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,11 +55,14 @@ menubar.jMenuItemFrameAbout=About MemoryGame
 ### frameabout :
 frameabout.title=About [ MemoryGame ]
 frameabout.jLabelHeader=<html><center><h3></h3></center></html>
-frameabout.jTextArea1=This is a sample basic desktop \napplication to help developers \nstart a new program. \n\nMany thanks to : \n\nISET Djerba...\n\n2017 (c) www.isetjb.net 
+frameabout.jTextArea1=Thank you for installing and playing \nwith our game. \nYour remarks and suggestions \nare welcome .... \n\nEmail : \n\nnafaa.friaa@isetjb.rnu.tn\n\n2017 (c) www.isetjb.net 
 frameabout.jButtonOk=Ok
 
 ### framegame :
 framegame.title=Game
 framegame.jLabelFooter.score=Score
+framegame.inputdialog.title=Congratulation, new best score !
+framegame.inputdialog.text=Your name :
+framegame.playerName.default=User
 
 
