filters on best score frame

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,6 +33,7 @@ desktop.confirmbeforeexitdialog.text=Quit MemoryGame ?
 ### menu :
 menubar.jMenuFile=File
 menubar.jMenuItemFrameGame=New Game
+menubar.jMenuItemFrameBestScore=Best scores
 menubar.jMenuItemQuit=Quit
 #
 menubar.jMenuSettings=Settings
@@ -65,4 +66,13 @@ framegame.inputdialog.title=Congratulation, new best score !
 framegame.inputdialog.text=Your name :
 framegame.playerName.default=User
 
+### bestscore frame : 
+bestscoreframe.title=Best scores
+bestscoreframe.jPanelHeader=ToolBar
+#
+bestscoreframe.jtable1.coloumn.playerName=Player
+bestscoreframe.jtable1.coloumn.gameDate=Date
+bestscoreframe.jtable1.coloumn.gameCategory=Category
+bestscoreframe.jtable1.coloumn.gameLevel=Level
+bestscoreframe.jtable1.coloumn.gameScore=Score
 
