--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,7 +25,7 @@ tag=DEFAULT
 ###
 
 ### desktop :
-desktop.title=Welcome Memory Game, good luck !
+desktop.title=Welcome to MemoryGame, good luck !
 desktop.jLabelFooterState=You are executing this game on : 
 desktop.confirmbeforeexitdialog.title=Please confirm
 desktop.confirmbeforeexitdialog.text=Quit MemoryGame ?
@@ -56,7 +56,7 @@ menubar.jMenuItemFrameAbout=About MemoryGame
 ### frameabout :
 frameabout.title=About [ MemoryGame ]
 frameabout.jLabelHeader=<html><center><h3></h3></center></html>
-frameabout.jTextArea1=Thank you for installing and playing \nwith our game. \nYour remarks and suggestions \nare welcome .... \n\nEmail : \n\nnafaa.friaa@isetjb.rnu.tn\n\n2017 (c) www.isetjb.net 
+frameabout.jTextArea1=Thank you for installing and playing \nwith our game. \nYour remarks and suggestions \nare welcome .... \n\nEmail : \nnafaa.friaa@isetjb.rnu.tn\n\n2017 (c) www.isetjb.net 
 frameabout.jButtonOk=Ok
 
 ### framegame :
@@ -67,8 +67,8 @@ framegame.inputdialog.text=Your name :
 framegame.playerName.default=User
 
 ### bestscore frame : 
-bestscoreframe.title=Best scores
-bestscoreframe.jPanelHeader=ToolBar
+bestscoreframe.title=Best scores [ History ]
+bestscoreframe.jPanelHeader=
 #
 bestscoreframe.jtable1.coloumn.playerName=Player
 bestscoreframe.jtable1.coloumn.gameDate=Date
