--- a/src/main/resources/messages_fr_FR.properties
+++ b/src/main/resources/messages_fr_FR.properties
@@ -23,3 +23,57 @@
 ### fr_FR Language file : 
 tag=fr_FR
 ###
+
+
+### desktop :
+desktop.title=Bienvenue \u00e0 notre jeu MemoryGame
+desktop.jLabelFooterState=Ce programme fonctionne sous : 
+desktop.confirmbeforeexitdialog.title=Confirmation
+desktop.confirmbeforeexitdialog.text=Quitter MemoryGame ?
+
+### menu :
+menubar.jMenuFile=Fichier
+menubar.jMenuItemFrameGame=Nouveau Jeu
+menubar.jMenuItemFrameBestScore=Meilleurs scores
+menubar.jMenuItemQuit=Quitter
+#
+menubar.jMenuSettings=Param\u00e8tres
+menubar.jMenuCategory=Cat\u00e9gorie
+menubar.jMenuItemCategory0=Animaux
+menubar.jMenuItemCategory1=Drapaux
+menubar.jMenuItemCategory2=Sport
+menubar.jMenuItemCategory3=Fruit
+menubar.jMenuItemCategory4=Transport
+menubar.jMenuItemCategory5=Technologie
+menubar.jMenuLevel=Niveau
+menubar.jMenuItemLevel0=D\u00e9butant
+menubar.jMenuItemLevel1=Moyen
+menubar.jMenuItemLevel2=Avanc\u00e9
+menubar.jMenuItemLevel3=Expert
+#
+menubar.jMenuHelp=Aide
+menubar.jMenuItemFrameAbout=A propos de MemoryGame
+
+### frameabout :
+frameabout.title=A propos de [ MemoryGame ]
+frameabout.jLabelHeader=<html><center><h3></h3></center></html>
+frameabout.jTextArea1=Merci d'avoir installer et jouer \navec notre jeu. \nVos remarques et suggestions \nsont les bienvenus .... \n\nEmail : \nnafaa.friaa@isetjb.rnu.tn\n\n2017 (c) www.isetjb.net 
+frameabout.jButtonOk=Valider
+
+### framegame :
+framegame.title=Jeu
+framegame.jLabelFooter.score=Score
+framegame.inputdialog.title=F\u00e9licitations, meilleur score !
+framegame.inputdialog.text=Votre pr\u00e9nom :
+framegame.playerName.default=Utilisateur
+
+### bestscore frame : 
+bestscoreframe.title=Meilleurs scores [ Historique ]
+bestscoreframe.jPanelHeader=
+#
+bestscoreframe.jtable1.coloumn.playerName=Joueur
+bestscoreframe.jtable1.coloumn.gameDate=Date
+bestscoreframe.jtable1.coloumn.gameCategory=Cat\u00e9gorie
+bestscoreframe.jtable1.coloumn.gameLevel=Niveau
+bestscoreframe.jtable1.coloumn.gameScore=Score
+
